Fixes safari's overflow + border-radius issues (#94)

--- a/src/scss/_toast.scss
+++ b/src/scss/_toast.scss
@@ -14,6 +14,10 @@
     min-width: $vt-toast-min-width;
     pointer-events: auto;
     overflow: hidden;
+    // overflow: hidden + border-radius does not work properly on Safari
+    // The following magic line fixes it
+    // https://stackoverflow.com/a/58283449
+    transform: translateZ(0);
     direction: ltr;
     &--rtl {
       direction: rtl;
